Tests/test_output/ImageViewing/test_brainmove.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Error using imgload (line 53)
This file is not available\n

Error in test_brainmove (line 7)
brain = imgload('fullmean');
        ^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
